add favorite_foods
